# davinci-resolve-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  test-cases.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  publish.yml  test.yml
docs/: demo.tape
src/dvr/: bootstrap.py  cli.py  errors.py  output.py  resolve.py  timecode.py  wi_client.py
src/dvr/commands/: _client.py  completion.py  doctor.py  install_wi.py  mcp_cmd.py  media.py  project.py  render.py  timeline.py
src/dvr/jobs/: store.py
src/dvr/mcp/: server.py  tools.py
src/dvr/schemas/: doctor.json  error.json  media.json  project.json  render.json  timeline.json
tests/: conftest.py
tests/unit/: test_bootstrap.py  test_bootstrap_cross_platform.py  test_completion.py  test_doctor.py  test_errors.py  test_jobs_store.py  test_mcp_server.py  test_media.py  test_output.py  test_project.py  test_render.py  test_skill_md.py  test_timecode.py  test_timeline.py  test_timeline_cut_move.py  test_timeline_delete.py  test_wi.py
wi-plugin/: index.html  manifest.xml  server.js
